# OpenCV-Notes

./: .gitignore  README.md  fourier.ipynb  pyproject.toml
python/: canny-edge-detection.ipynb  contour-hierarchy.ipynb  contour2.ipynb  contours.ipynb  custom_utils.py  fourier.ipynb  geometric-transformations.ipynb  histogram-backprojection.ipynb  histogram.ipynb  image-pyramids.ipynb  image-thresholding.ipynb  morphological-transformations.ipynb  template-matching.ipynb
